# dx-forge

./: CRATE_README.md  Cancel.tsx  Cargo.toml  Moon.tsx  README.md  WARNING.md  build.rs  build.zig  fastest_io  fastest_io.c  main  main.c  main.cpp  main.zig  page.tsx  warning.md
.github/workflows/: release.yml
.idx/: dev.nix
c_modules/: file_51.txt
c_modules_compiled_by_zig/: file_86.txt
forge/: ArrowRights.tsx  Arrowleft.tsx  Cargo.toml  page.tsx  test.txt
rust/: ArrowRight.tsx  Cargo.toml  build.rs  page.tsx
rust/src/: generator.zig  main.rs
src/: lib.rs  main.rs
src/chronicle/: mod.rs
src/cli/: enum_support.rs  lib.rs  mod.rs
src/cli/prompts/: mod.rs  one_liners.rs
src/cli/prompts/confirm/: mod.rs
src/cli/prompts/multiselect/: mod.rs
src/cli/prompts/select/: mod.rs
src/cli/prompts/text/: mod.rs
src/generator/: mod.rs
src/observer/: mod.rs
zig/: README.md
zig-cache/o/3e78045ee4e3060e6c07ce96acc76ef3/: c_file_creator
