[package]
name = "dx"
version = "0.1.0"
edition = "2021"
description = "dx - enhance your developement experience!"
repository = "https://github.com/mikaelmello/inquire"
license = "MIT"
readme = "./CRATE_README.md"
documentation = "https://docs.rs/inquire"
homepage = "https://github.com/mikaelmello/inquire"
authors = ["Mikael Mello <git@mikaelmello.com>"]
keywords = ["cli", "ask", "prompt", "question", "interactive"]
categories = ["command-line-interface", "value-formatting"]
include = ["/examples", "/src"]
rust-version = "1.66.0"

# [lib]
# name = "inquire"
# path = "src/lib.rs"
# doctest = true

[features]
default = ["macros", "crossterm", "one-liners", "fuzzy"]
macros = []
one-liners = []
fuzzy = ["fuzzy-matcher"]
date = ["chrono"]
editor = []
chrono = ["dep:chrono"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# notify = "8.1.0"
# tokio = { version = "1.46.1", features = ["full"] }
# anyhow = "1.0.98"
# thiserror = "2.0.12"
# futures = "0.3.31"
# gix = "0.73.0"
crossterm = { version = "0.25", optional = true }
termion = { version = "2.0", optional = true }
console = { version = "0.15", optional = true, features = [
  "windows-console-colors",
] }
fuzzy-matcher = { version = "0.3.7", default-features = true, optional = true }
bitflags = "2"
dyn-clone = "1"
once_cell = "1.18.0"
unicode-segmentation = "1"
unicode-width = "0.1"
fxhash = "0.2"
tempfile = "3.20.0"
# tempfile = { version = "3.20.0", default-features = true, optional = true}
chrono = { version = "0.4.1", default-features = true, optional = true }

syntect = "5.2.0"
similar = { version = "2.5.0", features = ["inline"] }
lazy_static = "1.4.0" # To load syntax/themes only once

[dev-dependencies]
rstest = "0.18.2"
chrono = { version = "0.4.1" }


# [[example]]
# name = "form"
# required-features = ["date", "macros"]

# [[example]]
# name = "date"
# required-features = ["date", "macros"]

# [[example]]
# name = "editor"
# required-features = ["editor"]

# [[example]]
# name = "expense_tracker"
# required-features = ["date", "macros"]

# [[example]]
# name = "render_config"
# required-features = ["date", "macros"]

# [[example]]
# name = "empty_render_config"
# required-features = ["date", "macros"]

# [[example]]
# name = "text_options"
# required-features = ["macros"]

# [[example]]
# name = "password_full_featured"
# required-features = ["macros"]

# [[example]]
# name = "manual_date_input"
# required-features = ["date"]
